--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-chartkick": "^1.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
